src/test/compile-fail/vec-mut-iter-borrow.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

fn main() {
    let mut xs = ~[1, 2, 3, 4];

    for x in xs.mut_iter() {
        xs.push(1) //~ ERROR cannot borrow `xs` because it is already borrowed as mutable
    }
}
